  assumed sequences) as well as code generation from WSDL/XSD
  patch contributed by Martin Mrose, tests written by Felix Schwarz
* add support for xsd.date (date range currently limited by datetime.date)
* Bug fixes:
  - fix exception in SOAPDispatcher when a handler does not return a SOAPResponse
  - correctly apply pattern restrictions for simple types


0.5.1 (2014-06-12)
------------------
* downgrade log level on soap action discovery


0.5.0 (2014-06-12)
------------------
* Make elements inherit from schema namespace
* better logging in soap/stub
* soap12: Quotes around action in http header


0.4.0 (2014-05-06)
------------------
* "soapbox" project forked by Felix Schwarz as "soapbox-bsd" due to
  licensing incompatibilities (Flight Data Services insists on using the
  GPL-incompatible OSL). This fork is based on the last soapbox commit
  still using the original 3-clause BSD license (7d3516fe).
  Later on the fork received significant contributions from Thomas Recouvreux
  and Xavier Fernandez (Polyconseil).
* added framework-agnostic SOAP dispatcher so soapbox-bsd is not tied to Django
  anymore but can be used with virtually any web framework (including Flask,
  Pyramid, pure WSGI)
* support for SOAP 1.2 and WSDL 1.2
* support for WS-Addressing
* Code is now compatible with Python 3
* support for Django >= 1.4
* fault actor support (Damian Powązka)
* many bug fixes for code generation and XML rendering
* preserve elementFormDefault attribute in Schema
* ability to use custom SOAP headers
* middleware stack to hook into SOAP request processing
* better handling of invalid SOAP requests (e.g. missing SOAP bodies, invalid
  SOAP actions)
* very likely even more fixes which I forgot to mention here ...


0.3.2
-----

* Initial support for variable URL scheme and host
* Test suite executes

0.3.1
-----

* SSL certificate verification

0.3.0
-----

- **Features**:
  - Add option to disable schema validation on parsing: