@@ -23,6 +23,7 @@ Changes
 * Bug fixes:
   - fix exception in SOAPDispatcher when a handler does not return a SOAPResponse
   - correctly apply pattern restrictions for simple types
+  - pattern restriction was not correctly serialized when generating xsd schemas
 
 
 0.5.1 (2014-06-12)
